--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="8dp">
 
         <ImageView
@@ -21,7 +22,8 @@
             android:background="@drawable/circular_shape"
             android:contentDescription="Profile Image"
             android:elevation="4dp"
-            android:padding="2dp"
+            android:padding="5dp"
+            android:layout_marginTop="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_profile" />
 
@@ -32,11 +34,12 @@
 
         <ImageButton
             android:id="@+id/btn_more_options"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:scaleType="fitCenter"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="More options"
-            android:padding="8dp"
+            android:padding="0dp"
             android:src="@drawable/ic_more_vert" />
     </LinearLayout>
 
