--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,6 +10,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/ic_launcher_foreground"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/logo"
         android:layout_gravity="center_horizontal"
