--- a/app/src/main/res/navigation/bottom_nav_menu.xml
+++ b/app/src/main/res/navigation/bottom_nav_menu.xml
@@ -12,4 +12,8 @@
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
         android:title="Profile" />
+    <item
+        android:id="@+id/aiFragment"
+        android:icon="@drawable/ic_more_vert"
+        android:title="Profile" />
 </menu>
