--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -80,4 +80,9 @@
                 app:argType="string" />
         </action>
     </fragment>
+    <fragment
+        android:id="@+id/aiFragment"
+        android:name="com.example.travel.ui.ImageGeneratorFragment"
+        android:label="AI generator"
+        tools:layout="@layout/fragment_image_generator"  />
 </navigation>
