--- a/app/src/main/res/layout/item_user_post.xml
+++ b/app/src/main/res/layout/item_user_post.xml
@@ -6,10 +6,9 @@
     android:layout_margin="4dp"
     android:elevation="4dp">
 
-    <!-- Image container -->
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"> <!-- Fixed height for the image -->
+        android:layout_height="200dp">
 
         <ImageView
             android:id="@+id/iv_post_image"
@@ -19,7 +18,6 @@
             android:adjustViewBounds="true" />
     </FrameLayout>
 
-    <!-- Title below the image -->
     <TextView
         android:id="@+id/tv_post_title"
         android:layout_width="match_parent"
