--- a/app/src/main/res/navigation/bottom_nav_menu.xml
+++ b/app/src/main/res/navigation/bottom_nav_menu.xml
@@ -15,5 +15,5 @@
     <item
         android:id="@+id/aiFragment"
         android:icon="@drawable/ic_more_vert"
-        android:title="Profile" />
+        android:title="OpenAI" />
 </menu>
