--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,5 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Don't have an account? Register"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center_horizontal"
         android:textColor="@android:color/holo_blue_dark" />
 </LinearLayout>
