--- a/app/src/main/res/layout/post_fragment.xml
+++ b/app/src/main/res/layout/post_fragment.xml
@@ -4,23 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
-    <Button
-        android:id="@+id/btn_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Edit"
-        android:layout_marginTop="20dp"
-        android:visibility="gone" />
 
-    <Button
-        android:id="@+id/btn_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Delete"
-        android:visibility="gone" />
-
-    <!-- Title of the Post -->
     <TextView
         android:id="@+id/tv_post_title"
         android:layout_width="match_parent"
@@ -42,20 +26,40 @@
     <!-- Content of the Post -->
     <TextView
         android:id="@+id/tv_post_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Post content goes here."
         android:textSize="14sp"
         android:paddingBottom="8dp" />
 
-    <!-- ImageView to display Post Image -->
     <ImageView
         android:id="@+id/iv_post_image"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:scaleType="centerCrop"
+        android:layout_height="355dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/rounded_image"
+        android:scaleType="centerCrop"
         android:src="@drawable/placeholder_image" />
+    <Button
+        android:id="@+id/btn_edit"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:padding="12dp"
+        android:layout_marginTop="10dp"
+        android:textSize="16sp"
+        android:background="@drawable/rounded_button"
+        android:text="Edit"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="match_parent"
+        android:layout_height="68dp"
+        android:padding="12dp"
+        android:layout_marginTop="10dp"
+        android:textSize="16sp"
+        android:background="@drawable/rounded_button"
+        android:text="Delete"
+        android:visibility="gone" />
 </LinearLayout>
